# photon-mapping

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  config.toml.example  deviceCode.h  hostCode.cxx
assets/blender/: cornell-box.blend  cornell-box.blend1  zac_waters_window.blend  zac_waters_window.blend1
assets/models/: format lights.txt  format materials.txt
assets/models/cornell-box/: cornell-box.fbx  cornell-box.glb  cornell-box.mtl  cornell-box2.glb  lights.txt  materials.txt
assets/models/dragon/: dragon-box.glb  dragon-box.mtl  lights.txt  materials.txt
assets/models/one-cube/: cube.mtl
assets/models/simple-cube/: cubes.glb  lights.txt
assets/models/simpler-cube/: cube.glb  lights.txt  materials.txt
assets/models/sphere/: lights.txt  sphere.glb  sphere.mtl  sphere2.glb  sphere2.mtl
assets/models/waters/water/: lights.txt  zack_water.mtl
assets/models/waters/window/: lights.txt  zack_waters_window.glb  zack_waters_window.mtl
assets/models/window/: lights.txt  window.mtl
common/cuda/: helpers.h
common/src/: assetImporter.cxx  assetImporter.h  camera.h  common.h  configLoader.h  light.h  material.h  mesh.h  ray.h  world.cpp  world.h
cuda/: deviceCode.cu
photon-mapping/cuda/: deviceCode.cu  deviceCode.h
photon-mapping/include/: deviceCode.h  photon.h  program.h
photon-mapping/src/: assetImporter.cxx  hostCode.cu  hostCode.cxx  mesh.h  world.h
photon-viewer/cuda/: deviceCode.cu
photon-viewer/include/: deviceCode.h  photon.h  program.h
photon-viewer/src/: hostCode.cu
ray-tracer/cuda/: deviceCode.cu  deviceCode.h  helpers.h  photonViewerDevice.cu  shading.h
ray-tracer/include/: context.h  deviceCode.h  photon.h  photonViewer.h  program.h
ray-tracer/shared/: common.h
ray-tracer/src/: assetImporter.cxx  assetImporter.h  hostCode.cu  hostCode.cxx  material.h  mesh.h  photonViewerHost.cu  programHost.cu  raytracerHost.cu  world.h
src/: hostCode.cxx
